test/sema/typeck/tuple/element-wrong-type.dora
fn f(a: (Int32, Bool)): String {
    return a.1;
}
